Partial: Brazilian Portuguese translation

--- a/src/center-ui/config/locales/views_pt_BR.yml
+++ b/src/center-ui/config/locales/views_pt_BR.yml
@@ -3,9 +3,9 @@ en:
     name: "Nome"
     code: "Código"
     class: "Classe"
-    subsystem: "Sub sistema"
+    subsystem: "Subsistema"
     auth_cert_hash: "Hash"
-    filename_empty: "Filename missing"
+    filename_empty: "Nome do arquivo ausente"
     cert: "Certificado"
     cert_unreadable: "O certificado do arquivo '%{filename}' não pode ser lido"
     cert_view: "Ver certificado"
@@ -17,96 +17,96 @@ en:
 
   about:
     index:
-      name: "Central Server"
-      version: "version"
+      name: "Servidor Central"
+      version: "Versão"
 
   feedback:
     index:
-      instruction_text_html: "X-Road enhancement requests and error reports can be submitted to the %{service_desk_link}. %{sign_up_link} for an account and get access to the %{service_desk_link_0} and %{backlog_link}."
-      service_desk: "X-Road Service Desk"
-      sign_up: "Sign up"
+      instruction_text_html: "Sugestões de melhoria no X-Road ou erros podem ser submetidos para o %{service_desk_link}. %{sign_up_link} para criar uma conta e ter acesso ao %{service_desk_link_0} e %{backlog_link}."
+      service_desk: "Suporte ao X-Road"
+      sign_up: "Registrar"
       backlog: "X-Road Backlog"
 
   init:
     index:
-      heading: "Initial configuration"
-      central_server_identification: "Central Server Identification"
-      instance_identifier: "Instance Identifier"
-      instance_identifier_help: "X-Road instance code, uniquely identifies this X-Road instance."
-      central_server_address: "Central Server Address"
-      central_server_address_help: "Central server's public DNS name or external IP address. Used for inbound connections from the external network to the central server."
-      software_token: "Software Token"
+      heading: "Configuração inicial"
+      central_server_identification: "Identificador do Servidor Central"
+      instance_identifier: "Identificador da Instãncia"
+      instance_identifier_help: "Código identificador, identifica exclusivamente uma instância do X-Road."
+      central_server_address: "Endereço do Servidor Central"
+      central_server_address_help: "DNS público do servidor central ou endereço de IP externo. Usado para conexões a partir da rede externa para o servidor central."
+      software_token: "Token de Software (A1)"
       pin: "PIN"
-      pin_help: "PIN for accessing software token."
-      repeat_pin: "Repeat PIN"
-      initialized: "Central Server initialized"
+      pin_help: "PIN para acesso ao token de software (A1)."
+      repeat_pin: "Repetir PIN"
+      initialized: "Servidor Central Inicializado"
 
   orgs:
     index:
-      name: "Registry code"
-      fullname: "X-Road member's name"
-      enter_name: "Registry code:"
-      enter_fullname: "X-Road member's name:"
-      add_address: "Add address"
-      delete: "Delete"
-      add_contact: "Add E-mail"
-      add_auth_cert_hash: "Add authentication certificate hash"
-      contact: "E-mail addresses"
-      address: "Addresses of security servers"
+      name: "Código de registro"
+      fullname: "Nome do membro do X-Via"
+      enter_name: "Código de registro:"
+      enter_fullname: "Nome do membro do X-Via:"
+      add_address: "Adicionar endereço"
+      delete: "Remover"
+      add_contact: "Adicionar E-mail"
+      add_auth_cert_hash: "Adicionar hash do certificado de autenticação"
+      contact: "Endereços de E-mail"
+      address: "Endereços do servidor seguro"
 
   members:
-    name: "Member name"
-    class: "Member class"
-    code: "Member code"
-    admin_contact: "Administrative Contact"
-    search: "Search Member"
+    name: "Nome da Entidade"
+    class: "Classe da Entidade"
+    code: "Código da Entidade"
+    admin_contact: "Contato Administrativo"
+    search: "Procurar Entidade"
     add:
-      title: "Add Member"
-      load_from_file: "Load Data from File"
+      title: "Adicionar Entidade"
+      load_from_file: "Ler Dados do Arquivo"
     edit:
-      title: "Member Details"
-      server: "Server"
+      title: "Detalhes da Entidade"
+      server: "Servidor"
       details:
-        legend: "Member Details"
+        legend: "Detalhes da Entidade"
       contact:
-        title: "Member contact editing"
-        legend: "Edit member contact"
+        title: "Editar contato da Entidade"
+        legend: "Editar contato da Entidade"
       owned_servers:
-        legend: "Owned Servers"
+        legend: "Servidores associados"
       global_group_membership:
-        legend: "Global Group Membership"
-        group: "Group"
-        description: "Group description"
+        legend: "Associação do Grupo Global"
+        group: "Grupo"
+        description: "Descrição do Grupo"
         subsystem:
-          table: "Subsystem"
-          add: "Add Member as Subsystem"
-        added_to_group: "Added to Group"
-        add_member_to_group: "Add '{{member}}' to Group"
-        remove_confirm: "Are you sure you want to remove '{{member}}' from global group '{{group}}'?"
+          table: "Subsistema"
+          add: "Adicionar entidade como subsistema"
+        added_to_group: "Adicionado ao grupo"
+        add_member_to_group: "Adicionar '{{member}}' ao grupo"
+        remove_confirm: "Você tem certeza que deseja remover '{{member}}' do grupo global '{{group}}'?"
       subsystems:
-        legend: "Subsystems"
-        subsystem_code: "Subsystem Code"
-        used_servers: "Used Servers"
-        remove_confirm: "Are you sure you want to remove subsystem '{{subsystem}}' from the X-Road member '{{memberClass}}/{{memberCode}}'?"
+        legend: "Subsistemas"
+        subsystem_code: "Código do subsistema"
+        used_servers: "Servidores associados"
+        remove_confirm: "Você tem certeza que deseja remover o subsistema '{{subsystem}}' da entidade '{{memberClass}}/{{memberCode}}'?"
       used_servers:
-        legend: "Used Servers"
-        server_code: "Server Code"
-        client_subsystem_code: "Client Subsystem Code"
-        server_owner: "Server Owner"
+        legend: "Servidores associados"
+        server_code: "Código do servidor"
+        client_subsystem_code: "Código do subsistem cliente"
+        server_owner: "Proprietário do servidor"
         add:
-          title: "New Client Registration Request"
-          management_service_provider_title: "Management Service Provider Registration Request"
+          title: "Nova solicitação de registro de cliente"
+          management_service_provider_title: "Solicitação de registro do provedor de serviços de gerenciamento"
           client:
-            legend: "Client Information"
+            legend: "Informações do cliente"
         remove:
-          title: "Client Deletion Request"
+          title: "Solicitar remoção do cliente"
           client:
-            legend: "Client Information"
+            legend: "Informação do cliente"
       name:
-        title: "Edit Member Name"
+        title: "Editar Nome da Entidade"
       all_servers:
         search:
-          title: "Security Servers"
+          title: "Servidores Seguros"
     remove_confirm: "Are you sure you want to delete the X-Road member '{{memberClass}}/{{memberCode}}'? {{ownedServersMessage}}"
     removable_owned_servers: "Following servers owned by this member will also be removed: '{{serversToRemove}}'"
 
