--- a/src/center-ui/config/locales/controllers_pt-BR.yml
+++ b/src/center-ui/config/locales/controllers_pt-BR.yml
@@ -48,9 +48,9 @@ pt-BR:
       get_records_count: "Obter número de ACs aprovadas"
       can_see_details: "verificar visibilidade das ACs aprovadas"
       refresh: "Atualizar lista de ACs aprovadas"
-      get_intermediate_ca_temp_cert_details: "get approved CA intermediate CA temp certificate details"
-      get_existing_intermediate_ca_cert_details: "get existing intermediate CA certificate details"
-      get_existing_intermediate_ca_cert_dump_and_hash: "get existing intermediate CA certificate dump and hash"
+      get_intermediate_ca_temp_cert_details: "obter lista de certificado temporário das ACs intermediarias"
+      get_existing_intermediate_ca_cert_details: "obter detalhes dos certificados de AC intermediárias existentes"
+      get_existing_intermediate_ca_cert_dump_and_hash: "obter dump e hast dos certificados de CA intermediários existentes"
       get_top_ca_cert_details: "get service CA certificate details"
       get_top_ca_cert_dump_and_hash: "get service CA certificate dump and hash"
       get_ocsp_infos: "get OCSP infos"
@@ -67,28 +67,29 @@ pt-BR:
     ca_settings_saved: "CA settings saved"
 
   orgs:
-    name_exists: "This registry code (short name) is already in use"
-    fullname_exists: "This name is already in use"
-    delete_success: "X-Road member removed"
-    org_type_error: "Unknown X-Road member type"
-    name_error: "Cannot read the registry code (short name) of '{{org}}'"
-    fullname_error: "Cannot read the name of '{{org}}'"
-    invalid_name: "Database name must not start with number"
-    card_not_available: "Required smart card ({{serial}}) not available"
+    name_exists: "Este código de registro já está em uso"
+    fullname_exists: "Este nome já está em uso"
+    delete_success: "Membro do X-Via removido"
+    org_type_error: "Tipo de membro do X-via desconhecido"
+    name_error: "Não foi possível ler o código de registro (short name) de '{{org}}'"
+    fullname_error: "Nao foi possível ler o nome de '{{org}}'"
+    invalid_name: "O nome do banco de dados não deve iniciar com números"
+    card_not_available: "Smart card obrigatório (Série: {{serial}}) não disponível"
 
   validation:
-    member_exists: "Member with class '%{member_class}' and code '%{member_code}' already exists"
-    securitserver_exists: "Security server with server code '%{server_code}', and with owner (member code: '%{member_code}' and member class code: '%{member_class}') already exists"
-    invalid_uri: "Invalid URI '%{uri}' for attribute '%{attribute}'"
-    already_exists: "Attribute '%{attribute}' with value '%{value}' already exists"
+    member_exists: "Um membro com a classe '%{member_class}' e o código '%{member_code}' já existe"
+    securitserver_exists: "Um Servidor Seguro com o código '%{server_code}', de propriedade de (membro: '%{member_code}' e classe: '%{member_class}') já existe"
+    invalid_uri: "URI '%{uri}' inválida para o atributo '%{attribute}'"
+    already_exists: "Atributo '%{attribute}' com valor '%{value}' já existe"
 
   central_services:
     action:
-      index: "display central services page"
-      get_records_count: "get central service records count"
-      can_see_details: "verify visibility of central service details"
-      services_refresh: "refresh central services table"
-      search_providers: "search central service providers"
+      index: "mostrar página de serviços centrais"
+      get_records_count: "obter número de serviços centrais"
+      can_see_details: "verificar visibilidade dos detalhes do serviço central"
+      services_refresh: "Atualizar tabela de serviços centrais"
+      search_providers: "buscar provedores de serviços centrais"
+      search_providers: "buscar provedores de serviços centrais"
       save_service: "save central service"
       update_service: "update central service"
       delete_service: "delete central service"
