--- a/src/center-ui/config/locales/controllers_pt-BR.yml
+++ b/src/center-ui/config/locales/controllers_pt-BR.yml
@@ -252,43 +252,43 @@ pt-BR:
       deleting_key_from_token_failed: "Erro removendo chave do token '%{token}': %{reason}"
       deleting_key_from_token_success: "Chave removida do token '%{token}' com sucesso "
       deleting_key_from_conf_success: "Chave removida com sucesso da configuração do servidor central"
-      optional_part_conf_error: "Cannot read optional configuration part %{message}."
+      optional_part_conf_error: "Não é possível ler a parte de configuração opcional %{message}."
       conf_part_upload:
-        successful: "Configuration file for content identifier '%{content_identifier}' uploaded successfully."
-        warnings: "Configuration file for content identifier '%{content_identifier}' uploaded with some warnings."
-        error: "Validation of configuration file with content identifier '%{content_identifier}' failed."
-        program_ended: "Validation program '%{program}' ended prematurely, make sure if it does the right thing."
-        io_error: "IO error occurred when running validation program '%{program}', message: '%{message}'"
-        no_program: "Validation program '%{program}' does not exist in the file system."
+        successful: "Arquivo de configuração do identificador de conteúdo '%{content_identifier}' carregado com sucesso"
+        warnings: "Arquivo de configuração para o identificador de conteúdo '%{content_identifier}' carregado com alguns avisos."
+        error: "A validação do arquivo de configuração com o identificador de conteúdo '%{content_identifier}' falhou."
+        program_ended: "O programa de validação '%{program}' terminou prematuramente, verifique se ele fez a coisa certa."
+        io_error: "Ocorreu um erro de IO ao executar o programa de validação '%{program}', mensagem: '%{message}'"
+        no_program: "O programa de validação '%{program}' não existe no sistema de arquivos."
     trusted_anchors:
-      upload_successful: "Configuration anchor for instance '%{instance}' uploaded successfully."
-      delete_successful: "Configuration anchor of instance '%{instance}' deleted successfully."
+      upload_successful: "A âncora de configuração da instância '%{instance}' foi carregada com sucesso."
+      delete_successful: "A âncora de configuração da instância '%{instance}' foi excluída com sucesso."
       upload_info:
-        instance: "Instance identifier: %{instance}"
-        generated: "Anchor generated: %{generated}"
-        hash: "Anchor hash (%{alg}): %{hash}"
+        instance: "Identificador da instância: %{instance}"
+        generated: "Âncora de configuração gerada: %{gerada}"
+        hash: "Hash da âncora de configuração (%{alg}): %{hash}"
       error:
-        same_instance: "Anchors originating from this instance are not supported as trusted anchors."
-        anchor_malformed: "Incorrect file structure."
+        same_instance: "As âncoras originárias dessa instância de rede não são suportadas como âncoras confiáveis."
+        anchor_malformed: "Estrutura de arquivo incorreta."
 
   tsps:
     action:
-      index: "display approved TSAs page"
-      get_records_count: "get approved TSAs records count"
-      can_see_details: "verify visibility of approved TSA details"
-      get_cert_details_by_id: "get certificate details by ID"
-      tsps_refresh: "refresh approved TSAs table"
-      get_existing_tsp_cert_details: "get existing TSA certificate details"
-      get_existing_tsp_cert_dump_and_hash: "get existing TSA certificate dump and hash"
-      save_new_tsp: "save new approved TSA"
-      edit_existing_tsp: "edit existing approved TSA"
-      delete_tsp: "delete approved TSA"
-      upload_tsp_cert: "upload approved TSA certificate"
+      index: "Mostrar ACTs aprovadas"
+      get_records_count: "obter contagem de registros de ACTs aprovados"
+      can_see_details: "verificar visibilidade dos detalhes das TSA autorizadas"
+      get_cert_details_by_id: "listar detlahes do certificado por ID"
+      tsps_refresh: "atualizar lista de ACTs aprovadas"
+      get_existing_tsp_cert_details: "obter detalhes dos certificados de ACT existentes"
+      get_existing_tsp_cert_dump_and_hash: "listar dump and hash dos certificados de ACTs existentes"
+      save_new_tsp: "salvar nova ACT"
+      edit_existing_tsp: "editar ACT existente"
+      delete_tsp: "remover ACT aprovada"
+      upload_tsp_cert: "enviar certificado da ACT"
 
   system_settings:
-    member_class_already_exists: "Member class with the same code already exists"
+    member_class_already_exists: "Já existe uma classe com o mesmo código"
     central_server_address_edit_params:
       centralServerAddress:
-        host: "Central server address must be DNS name or IP address"
-    service_provider_registered: "Management service provider '%{client_id}' registered as security server '%{server_id}' client"
+        host: "O Servidor Central deve possuir um DNS válido ou um endereço de IP"
+    service_provider_registered: "Provedor de serviço de gerenciamento '%{client_id}' registrado como cliente do servidor seguro '%{server_id}'"
 
